--- a/src/app/core/components/doctor-management/doctors/doctors.component.html
+++ b/src/app/core/components/doctor-management/doctors/doctors.component.html
@@ -1,1 +1,371 @@
-<p>doctors works!</p>
+<app-breadcrumb></app-breadcrumb>
+
+<!-- <p-breadcrumb class="max-w-full" [model]="" /> -->
+@let doctors = doctors$ | async;
+<p-table
+  [scrollable]="true"
+  scrollHeight="flex"
+  #dt
+  [value]="doctors || []"
+  dataKey="docId"
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+  [showCurrentPageReport]="true"
+  [size]="'large'"
+  [tableStyle]="{ 'min-width': '60rem' }"
+  [paginator]="true"
+  [rows]="10"
+  stripedRows
+  responsiveLayout="scroll"
+  class="custom-table w-full overflow-x-auto"
+  [rowsPerPageOptions]="[5, 10, 20]"
+  [globalFilterFields]="['employeeName']"
+  stateStorage="session"
+  stateKey="statedemo-session"
+  [loading]="isLoading()"
+>
+  <ng-template #caption>
+    <div class="flex flex-wrap gap-2">
+      <p-button
+        label="Clear"
+        [outlined]="true"
+        icon="pi pi-filter-slash"
+        (click)="clear(dt)"
+      />
+      <p-button
+        p-button
+        icon="pi pi-plus"
+        label="Add Doctor"
+        styleClass="ml-2"
+        (click)="displayDialog.set(true)"
+      />
+    </div>
+  </ng-template>
+  <ng-template pTemplate="header" let-columns>
+    <tr>
+      <th>Employee Name</th>
+      <th>CNIC</th>
+      <th>Personal Number</th>
+      <th>Gender</th>
+      <th>PMC Number</th>
+      <th>Designation</th>
+      <th>Qualification</th>
+      <th>Consultation Fee</th>
+      <th>Follow-Up Fee</th>
+      <th>Status</th>
+      <th>Actions</th>
+    </tr>
+  </ng-template>
+  <ng-template
+    pTemplate="body"
+    let-rowData
+    let-columns="columns"
+    let-rowIndex="rowIndex"
+  >
+    <tr [pSelectableRow]="rowData">
+      <td>{{ rowData["employeeName"] ?? " - " }}</td>
+      <td>{{ rowData["cnic"] ?? " - " }}</td>
+      <td>{{ rowData["personalNumber"] ?? " - " }}</td>
+      <td>{{ rowData["gender"] ?? " - " }}</td>
+      <td>{{ rowData["pmcnumber"] ?? " - " }}</td>
+      <td>{{ rowData["displayDesignation"] ?? " - " }}</td>
+      <td>{{ rowData["displayQualification"] ?? " - " }}</td>
+      <td>{{ rowData["consultationFee"] ?? " - " }}</td>
+      <td>{{ rowData["followUpFee"] ?? " - " }}</td>
+      <td>
+        <span
+          [ngClass]="{
+            'bg-green-100 text-green-800': rowData['status'] === 1,
+            'bg-red-100 text-red-800': rowData['status'] === 0
+          }"
+          class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold"
+        >
+          {{ rowData["status"] === 1 ? "Active" : "Inactive" }}
+        </span>
+      </td>
+      <td>
+        <!-- Assign Staff -->
+        <button
+          pButton
+          icon="pi pi-pencil"
+          class="p-button-rounded p-button-text p-button-sm"
+          pTooltip="Edit Doctor"
+          tooltipPosition="top"
+          (click)="edit(rowData)"
+        ></button>
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
+
+<p-dialog
+  [visible]="displayDialog()"
+  styleClass="w-full md:w-[40rem] h-full scrollbar"
+  [closable]="false"
+  [maximizable]="true"
+>
+  <ng-template #header>
+    <div class="flex items-center justify-between w-full">
+      <h3 class="font-semibold text-lg">Add Doctor</h3>
+      <button
+        pButton
+        icon="pi pi-times"
+        (click)="displayDialog.set(false)"
+        class="p-button-rounded p-button-text"
+      ></button>
+    </div>
+  </ng-template>
+
+  <form [formGroup]="doctorForm" (ngSubmit)="onSubmit()">
+    <div class="p-fluid grid gap-3">
+      <!-- Employee Name -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="employeeName" class="w-full md:w-1/3 font-medium"
+          >Employee Name</label
+        >
+        <div class="w-full md:w-2/3">
+          <p-select
+            [options]="employeesDropdown"
+            formControlName="empId"
+            placeholder="Select Employee"
+            optionLabel="employeeName"
+            optionValue="empId"
+            class="w-full"
+          ></p-select>
+
+          <p-message
+            *ngIf="
+              doctorForm.get('employeeName')?.invalid &&
+              (doctorForm.get('employeeName')?.dirty ||
+                doctorForm.get('employeeName')?.touched)
+            "
+            severity="error"
+            text="Employee Name is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- PMC Number -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="pmcnumber" class="w-full md:w-1/3 font-medium"
+          >PMC Number</label
+        >
+        <div class="w-full md:w-2/3">
+          <input
+            pInputText
+            placeholder="Enter PMC Number"
+            formControlName="pmcnumber"
+            class="w-full"
+          />
+          <p-message
+            *ngIf="
+              doctorForm.get('pmcnumber')?.invalid &&
+              (doctorForm.get('pmcnumber')?.dirty ||
+                doctorForm.get('pmcnumber')?.touched)
+            "
+            severity="error"
+            text="PMC Number must be a valid number."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- PMC Certificate (File Upload) -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="pmccertificate" class="w-full md:w-1/3 font-medium"
+          >PMC Certificate</label
+        >
+        <p-fileUpload
+          mode="basic"
+          chooseLabel="Choose"
+          (onSelect)="onFileSelect($event, 'pmccertificate')"
+        ></p-fileUpload>
+        <p-message
+          *ngIf="
+            doctorForm.get('pmccertificate')?.invalid &&
+            (doctorForm.get('pmccertificate')?.dirty ||
+              doctorForm.get('pmccertificate')?.touched)
+          "
+          severity="error"
+          text="PMC Certificate is required."
+        ></p-message>
+      </div>
+
+      <!-- Electronic Signature (File Upload) -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="electronicSignature" class="w-full md:w-1/3 font-medium"
+          >Electronic Signature</label
+        >
+        <p-fileUpload
+          mode="basic"
+          chooseLabel="Choose"
+          (onSelect)="onFileSelect($event, 'electronicSignature')"
+          accept=".png,.jpg,.jpeg"
+        ></p-fileUpload>
+        <p-message
+          *ngIf="
+            doctorForm.get('electronicSignature')?.invalid &&
+            (doctorForm.get('electronicSignature')?.dirty ||
+              doctorForm.get('electronicSignature')?.touched)
+          "
+          severity="error"
+          text="Electronic Signature is required."
+        ></p-message>
+      </div>
+
+      <!-- Designation -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="displayDesignation" class="w-full md:w-1/3 font-medium"
+          >Designation</label
+        >
+        <div class="w-full md:w-2/3">
+          <!-- <input
+            pInputText
+            type="text"
+            placeholder="Enter Designation"
+            formControlName="displayDesignation"
+            class="w-full"
+          /> -->
+
+          <p-select
+            [options]="designationDropdown"
+            formControlName="displayDesignation"
+            placeholder="Select Designation"
+            optionLabel="name"
+            optionValue="name"
+            class="w-full"
+          ></p-select>
+
+          <p-message
+            *ngIf="
+              doctorForm.get('displayDesignation')?.invalid &&
+              (doctorForm.get('displayDesignation')?.dirty ||
+                doctorForm.get('displayDesignation')?.touched)
+            "
+            severity="error"
+            text="Designation is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- Qualification -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="displayQualification" class="w-full md:w-1/3 font-medium"
+          >Qualification</label
+        >
+        <div class="w-full md:w-2/3">
+          <!-- <input
+            pInputText
+            type="text"
+            placeholder="Enter Qualification"
+            formControlName="displayQualification"
+            class="w-full"
+          /> -->
+
+          <p-select
+            [options]="educationDegrees"
+            formControlName="displayQualification"
+            placeholder="Select Education Degree"
+            optionLabel="name"
+            optionValue="name"
+            class="w-full"
+          ></p-select>
+          <p-message
+            *ngIf="
+              doctorForm.get('displayQualification')?.invalid &&
+              (doctorForm.get('displayQualification')?.dirty ||
+                doctorForm.get('displayQualification')?.touched)
+            "
+            severity="error"
+            text="Qualification is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- Consultation Fee -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="consultationFee" class="w-full md:w-1/3 font-medium"
+          >Consultation Fee</label
+        >
+        <div class="w-full md:w-2/3">
+          <input
+            pInputText
+            type="number"
+            placeholder="Enter Consultation Fee"
+            formControlName="consultationFee"
+            class="w-full"
+          />
+          <p-message
+            *ngIf="
+              doctorForm.get('consultationFee')?.invalid &&
+              (doctorForm.get('consultationFee')?.dirty ||
+                doctorForm.get('consultationFee')?.touched)
+            "
+            severity="error"
+            text="Consultation Fee is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- Follow-Up Fee -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="followUpFee" class="w-full md:w-1/3 font-medium"
+          >Follow-Up Fee</label
+        >
+        <div class="w-full md:w-2/3">
+          <input
+            pInputText
+            type="number"
+            placeholder="Enter Follow-Up Fee"
+            formControlName="followUpFee"
+            class="w-full"
+          />
+          <p-message
+            *ngIf="
+              doctorForm.get('followUpFee')?.invalid &&
+              (doctorForm.get('followUpFee')?.dirty ||
+                doctorForm.get('followUpFee')?.touched)
+            "
+            severity="error"
+            text="Follow-Up Fee is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- Status -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="status" class="w-full md:w-1/3 font-medium">Status</label>
+        <div class="w-full md:w-2/3">
+          <p-checkbox [binary]="true" formControlName="status" class="w-full"
+            >Active</p-checkbox
+          >
+          <p-message
+            *ngIf="
+              doctorForm.get('status')?.invalid &&
+              (doctorForm.get('status')?.dirty ||
+                doctorForm.get('status')?.touched)
+            "
+            severity="error"
+            text="Status is required."
+          ></p-message>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="doctorForm.errors?.['allrequired']" class="mt-2">
+      <p
+        class="text-red-500 text-sm font-medium bg-red-100 p-2 rounded-md border border-red-400"
+      >
+        ⚠️ All fields are required.
+      </p>
+    </div>
+
+    <!-- Buttons -->
+    <div class="flex justify-end mt-4">
+      <button
+        pButton
+        label="Save"
+        type="submit"
+        class="p-button p-button-primary"
+      ></button>
+    </div>
+  </form>
+</p-dialog>
