--- a/src/app/core/components/patient-registration/patient-registration.component.html
+++ b/src/app/core/components/patient-registration/patient-registration.component.html
@@ -3,19 +3,24 @@
 
   <div class="mb-8">
     <div class="flex gap-8">
-      <div class="flex items-center gap-2">
+      <div
+        class="flex items-center gap-4"
+        *ngFor="let type of patientTypeDropDown$ | async"
+      >
         <p-radioButton
           name="patientType"
-          inputId="regular"
-          value="Regular"
-          [(ngModel)]="patientType"
-          (onClick)="onTypeChange('Regular')"
+          [inputId]="'type_' + type.id"
+          [value]="type.id"
+          [(ngModel)]="selectedPatientTypeId"
+          (onClick)="onTypeChange(type.name)"
         >
         </p-radioButton>
-        <label for="regular" class="cursor-pointer">Regular</label>
+        <label [for]="'type_' + type.id" class="cursor-pointer">{{
+          type.name
+        }}</label>
       </div>
 
-      <div class="flex items-center gap-2">
+      <!-- <div class="flex items-center gap-2">
         <p-radioButton
           name="patientType"
           inputId="entitle"
@@ -37,11 +42,11 @@
         >
         </p-radioButton>
         <label for="panel" class="cursor-pointer">Panel</label>
-      </div>
+      </div> -->
     </div>
   </div>
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
+  <form [formGroup]="patientForm" (ngSubmit)="submit()">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
       <div>
         <label>MR No</label>
@@ -67,7 +72,7 @@
 
       <div>
         <label>Gender</label>
-        <p-dropdown
+        <p-select
           [options]="[
             { value: 'Male', label: 'Male' },
             { value: 'Female', label: 'Female' }
@@ -76,12 +81,12 @@
           placeholder="Select gender"
           class="w-full"
           variant="filled"
-        ></p-dropdown>
+        ></p-select>
       </div>
 
       <div>
         <label>Marital Status</label>
-        <p-dropdown
+        <p-select
           [options]="[
             { value: 'Single', label: 'Single' },
             { value: 'Married', label: 'Married' },
@@ -92,7 +97,7 @@
           placeholder="Select marital status"
           class="w-full"
           variant="filled"
-        ></p-dropdown>
+        ></p-select>
       </div>
 
       <div>
@@ -119,7 +124,7 @@
 
       <div>
         <label>Date of Birth</label>
-        <p-calendar
+        <p-datepicker
           variant="filled"
           type="date"
           formControlName="dob"
@@ -130,49 +135,50 @@
           [inputStyle]="{ width: '100%' }"
           [ngClass]="{
             'ng-invalid ng-dirty':
-              form.controls['dob'].invalid && form.controls['dob'].touched
+              patientForm.controls['dob'].invalid &&
+              patientForm.controls['dob'].touched
           }"
         />
       </div>
 
       <div>
         <label>Religion</label>
-        
-        <p-dropdown
+
+        <p-select
           [options]="(religionDropDown$ | async) ?? []"
           formControlName="religionId"
           placeholder="Select Religion"
           class="w-full"
           variant="filled"
-        ></p-dropdown>
+        ></p-select>
       </div>
 
       <div>
-        <label>Country ID</label>
-        <input
-          pInputText
+        <label>Country</label>
+
+        <p-select
+          [options]="(countryDropDown$ | async) ?? []"
           formControlName="countryId"
-          type="number"
+          placeholder="Enter Country"
           class="w-full"
-          placeholder="Enter Country ID"
           variant="filled"
-        />
+          (onChange)="onValueChange($event, 'country')"
+        ></p-select>
       </div>
 
       <div>
-        <label>Province ID</label>
-        <input
-          pInputText
+        <label>Province</label>
+        <p-select
+          [options]="(provinceDropDown$ | async) ?? []"
           formControlName="provinceId"
-          type="number"
+          placeholder="Enter Province"
           class="w-full"
-          placeholder="Enter Province ID"
           variant="filled"
-        />
+        ></p-select>
       </div>
 
       <div>
-        <label>City ID</label>
+        <label>City</label>
         <input
           pInputText
           formControlName="cityId"
@@ -228,15 +234,15 @@
       </div>
 
       <div>
-        <label>Guardian Type ID</label>
-        <input
-          pInputText
+        <label>Guardian Type</label>
+
+        <p-select
+          [options]="(guardianDropDown$ | async) ?? []"
           formControlName="guadianTypeId"
-          type="number"
+          placeholder="Enter Guardian Type"
           class="w-full"
-          placeholder="Enter Guardian Type ID"
           variant="filled"
-        />
+        ></p-select>
       </div>
 
       <div>
@@ -262,27 +268,26 @@
       </div>
 
       <div>
-        <label>NOK Type ID</label>
-        <input
-          pInputText
+        <label>NOK Type</label>
+
+        <p-select
+          [options]="(relationDropDown$ | async) ?? []"
           formControlName="noktypeId"
-          type="number"
+          placeholder="Enter NOK Type "
           class="w-full"
-          placeholder="Enter NOK Type ID"
           variant="filled"
-        />
+        ></p-select>
       </div>
 
       <div>
-        <label>NOK Relation ID</label>
-        <input
-          pInputText
+        <label>NOK Relation</label>
+        <p-select
+          [options]="(relationDropDown$ | async) ?? []"
           formControlName="nokrelationId"
-          type="number"
+          placeholder="Enter NOK Relation "
           class="w-full"
-          placeholder="Enter NOK Relation ID"
           variant="filled"
-        />
+        ></p-select>
       </div>
 
       <div>
@@ -318,17 +323,17 @@
         />
       </div>
 
-      <div>
-        <label>Patient Type ID</label>
-        <input
-          pInputText
+      <!-- <div>
+        <label>Patient Type</label>
+
+        <p-select
+          [options]="(patientTypeDropDown$ | async) ?? []"
           formControlName="patientTypeId"
-          type="number"
+          placeholder="Enter Patient Type"
           class="w-full"
-          placeholder="Enter Patient Type ID"
           variant="filled"
-        />
-      </div>
+        ></p-select>
+      </div> -->
 
       <div>
         <label>Organization (porgId)</label>
@@ -371,16 +376,26 @@
         </div>
         <div>
           <label>Card Expiry Date</label>
-          <p-calendar
-            formControlName="pnlEmpCardExpiry"
-            showIcon
-            class="w-full"
-            placeholder="Select Card Expiry Date"
+
+          <p-datepicker
             variant="filled"
-          ></p-calendar>
+            type="date"
+            formControlName="pnlEmpCardExpiry"
+            placeholder="Select Card Expiry Date"
+            [yearNavigator]="true"
+            [yearRange]="'2000:2030'"
+            [style]="{ width: '100%' }"
+            [inputStyle]="{ width: '100%' }"
+            [ngClass]="{
+              'ng-invalid ng-dirty':
+                patientForm.controls['dob'].invalid &&
+                patientForm.controls['dob'].touched
+            }"
+          />
         </div>
         <div>
           <label>Department</label>
+
           <input
             pInputText
             formControlName="pnlDepartment"
@@ -391,6 +406,14 @@
         </div>
         <div>
           <label>Designation</label>
+
+          <!-- <p-select
+            [options]="(designationDropDown$ | async) ?? []"
+            formControlName="designation"
+            placeholder="Enter Designation "
+            class="w-full"
+            variant="filled"
+          ></p-select> -->
           <input
             pInputText
             formControlName="designation"
@@ -401,20 +424,34 @@
         </div>
         <div>
           <label>Upload Document 1</label>
-          <input type="file" class="w-full" variant="filled" />
+          <p-fileUpload
+            mode="basic"
+            name="fileUpload"
+            [auto]="true"
+            chooseLabel="Upload File"
+            class="w-full"
+            (uploadHandler)="uploadFile($event, 'doc1')"
+          ></p-fileUpload>
         </div>
         <div>
           <label>Upload Document 2</label>
-          <input type="file" class="w-full" variant="filled" />
+          <p-fileUpload
+            mode="basic"
+            name="fileUpload"
+            [auto]="true"
+            chooseLabel="Upload File"
+            class="w-full"
+            (uploadHandler)="uploadFile($event, 'doc2')"
+          ></p-fileUpload>
         </div>
       </div>
 
       <h3 class="text-xl font-semibold mt-4 mb-2">Dependent Details</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
-        <div>
+        <!-- <div>
           <label>Is Self?</label>
           <p-checkbox binary="true" formControlName="isSelf"></p-checkbox>
-        </div>
+        </div> -->
         <div>
           <label>Dependent NIC</label>
           <input
@@ -426,14 +463,15 @@
           />
         </div>
         <div>
-          <label>Dependent Relation ID</label>
-          <input
-            pInputText
+          <label>Dependent Relation</label>
+
+          <p-select
+            [options]="(relationDropDown$ | async) ?? []"
             formControlName="dependentRelationId"
+            placeholder="Enter Dependent Relation"
             class="w-full"
-            placeholder="Enter Dependent Relation ID"
             variant="filled"
-          />
+          ></p-select>
         </div>
       </div>
     </ng-container>
