--- a/src/app/core/components/doctor-management/doctors/doctors.component.html
+++ b/src/app/core/components/doctor-management/doctors/doctors.component.html
@@ -137,6 +137,7 @@
         >
         <div class="w-full md:w-2/3">
           <p-select
+            filter="true"
             [options]="employeesDropdown"
             formControlName="empId"
             placeholder="Select Employee"
@@ -204,6 +205,7 @@
         >
         <div class="w-full md:w-2/3">
           <p-select
+            filter="true"
             [options]="designationDropdown"
             formControlName="displayDesignation"
             placeholder="Select Designation"
