--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,48 @@ body {
 .p-datatable.p-datatable-lg .p-datatable-header {
   padding: 0.5rem 0rem !important;
 }
+
+
+.custom-confirm-dialog {
+  .p-confirm-dialog {
+    border-radius: 1rem;
+    background: linear-gradient(135deg, #f0f4ff, #ffffff);
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .p-dialog-header {
+    background: linear-gradient(to right, #1d5595 0%, #1d5595 100%);
+    color: white;
+    font-size: 1.2rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+  }
+
+  .p-dialog-content {
+    font-size: 1rem;
+    color: #333;
+    padding: 1.5rem;
+  }
+
+  .p-confirm-dialog-icon {
+    color: #3f51b5;
+    font-size: 2rem;
+  }
+
+  .p-dialog-footer {
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+  }
+
+  .p-button-success {
+    background-color: #1d5595 !important;
+    border: none !important;
+  }
+
+  .p-button-secondary {
+    background-color: white !important;
+    border: none !important;
+  }
+}
