--- a/src/app/core/components/patient-registration/patient-registration.component.scss
+++ b/src/app/core/components/patient-registration/patient-registration.component.scss
@@ -1,3 +1,8 @@
 .ng-invalid.ng-dirty {
     border: 1px solid red !important;
 }
+::ng-deep{
+    p-inputmask input{
+        width: 100%;
+    }
+}
