--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,4 +96,8 @@ body {
     background-color: white !important;
     border: none !important;
   }
+    
 }
+ .cnicInput input {
+   width: 100%;
+ }
