--- a/src/app/core/components/patient-checkin/patient-checkin.component.html
+++ b/src/app/core/components/patient-checkin/patient-checkin.component.html
@@ -3,7 +3,10 @@
   (ngSubmit)="onSubmit()"
   class="w-full mx-auto p-6 space-y-4"
 >
+  <h2 class="text-3xl font-bold mb-6">Patient CheckIn</h2>
+
   <!-- Patient Type -->
+  
   <div>
     <label class="block text-lg font-medium text-gray-700">Patient Type:</label>
     <div class="flex space-x-4 mt-2">
@@ -152,6 +155,8 @@
         >Referred Notes:</label
       >
       <textarea
+      pTextarea
+      variant="filled"
         formControlName="referedNotes"
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
       ></textarea>
@@ -159,13 +164,15 @@
   </div>
 
   <!-- Submit Button -->
-  <div class="text-center">
-    <button
+  <div class="text-right mt-6">
+    <p-button
+       label="Submit"
       type="submit"
+       icon="pi pi-check"
       [disabled]="checkinForm.invalid"
-      class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 disabled:bg-gray-400"
+      class="w-full md:w-1/3"
     >
-      Submit
-    </button>
+      
+    </p-button>
   </div>
 </form>
